Update namespace for Config

--- a/www/app/views/main.scala.html
+++ b/www/app/views/main.scala.html
@@ -55,6 +55,6 @@
     }
 
     <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.ico")">
-    <!-- git version @{lib.flow.play.util.Config.getRequiredString("git.version")} -->
+    <!-- git version @{io.flow.play.util.Config.requiredString("git.version")} -->
   </body>
 </html>
