--- a/www/app/views/mainNavbar.scala.html
+++ b/www/app/views/mainNavbar.scala.html
@@ -1,32 +1,27 @@
 @(data: lib.UiData)
 
-<div class="main-navbar navbar navbar-default navbar-fixed-top" role="navigation">
+<div class="navbar navbar-default navbar-fixed-top" role="navigation">
   <div class="container">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="@routes.ApplicationController.index()">dependency</a>
+    </div>
     <div class="navbar-collapse collapse">
-      <ul class="nav navbar-nav">
-        <li class="logo"><a class="apidoc" href="/">Dependencies</a></li>
-      </ul>
-
-      <div class="col-sm-3 col-md-3 pull-right">
-          <form class="navbar-form" role="search" action="@routes.SearchController.index()">
-              <div class="input-group">
-                  <input type="text" class="form-control" placeholder="Search" name="q" value="@data.query.getOrElse("")">
-                  <div class="input-group-btn">
-                      <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-                  </div>
-              </div>
-          </form>
-      </div> 
-
       @if(data.user.isEmpty) {
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="@routes.LoginController.index(return_url = Some(data.requestPath))">Login/Register</a></li>
+          <li><a href="/login">Login/Register</a></li>
         </ul>
       } else {
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="@routes.LogoutController.index()">Logout</a></li>
-        </ul>
+        <div class="dropdown nav navbar-nav navbar-right">
+          <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
+            @data.user.get.email <span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+            <li role="presentation"><a role="menuitem" tabindex="-1" href="/logout">Logout</a></li>
+          </ul>
+        </div>
       }
     </div>
   </div>
 </div>
+
+
