--- a/www/app/views/main.scala.html
+++ b/www/app/views/main.scala.html
@@ -6,23 +6,31 @@
 
 <!DOCTYPE html>
 <html lang="en">
-  @mainHead({data.headTitle match {
-              case None => data.title
-              case Some(_) => data.headTitle
-            }})
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>@data.headTitle.getOrElse(data.title.getOrElse("dependency"))</title>
+  <link rel="stylesheet" media="screen" href="@routes.Assets.at("bootstrap-3.3.1/css/bootstrap.min.css")">
+    <link rel="stylesheet" media="screen" href="@routes.Assets.at("css/main.css")">
+    <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.ico")">
+  </head>
 
   <body data-spy="scroll" data-target=".models">
 
-    @mainNavbar(data = data)
+    @mainNavbar(data)
 
-    <div class="container-fluid main-container">
+    <div class="container-fluid">
       <div class="row">
-          
+
         <div class="col-sm-3 col-md-2 sidebar models">
           <ul class="nav nav-sidebar">
-            <li><a href="#">Item 1</a>/li>
+            <li><a@if(data.section == Some(lib.Section.Dashboard)) { class="active" } href="@routes.ApplicationController.index()">Dashboard</a></li>
+            <li><a@if(data.section == Some(lib.Section.Projects)) { class="active" } href="#">Projects</a></li>
+            <li><a@if(data.section == Some(lib.Section.Libraries)) { class="active" } href="#">Libraries</a></li>
+            <li><a@if(data.section == Some(lib.Section.Languages)) { class="active" } href="#">Languages</a></li>
           </ul>
         </div>
+
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
 
           @flash.get("success").map { msg => <span class="label label-success">@msg</span> }
@@ -47,14 +55,10 @@
       </div>
     </div>
 
-    <script src="@routes.Assets.at("javascripts/jquery-1.11.0.min.js")"></script>
-    <script src="@routes.Assets.at("bootstrap-3.1.1/js/bootstrap.min.js")" type="text/javascript"></script>
-    <script src="@routes.Assets.at("javascripts/util.js")" type="text/javascript"></script>
-    @jsFiles.map { path =>
-      <script src="@routes.Assets.at(path)" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="@routes.Assets.at("bootstrap-3.3.1/js/bootstrap.min.js")" type="text/javascript"></script>
+    @jsFiles.map { js =>
+      <script src="@routes.Assets.at(s"js/$js")" type="text/javascript"></script>
     }
-
-    <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.ico")">
-    <!-- git version @{io.flow.play.util.Config.requiredString("git.version")} -->
   </body>
 </html>
