Layout UI for basic rendering

--- a/www/app/views/logged_out.scala.html
+++ b/www/app/views/logged_out.scala.html
@@ -1,4 +1,4 @@
-@(data: lib.UiData)(implicit flash: Flash, messages: Messages)
+@(data: com.bryzek.dependency.lib.UiData)(implicit flash: Flash, messages: Messages)
 
 @main(data.copy(title = Some("You are now logged out"))) {
 
