--- a/www/app/views/healthchecks/index.scala.html
+++ b/www/app/views/healthchecks/index.scala.html
@@ -1,4 +1,4 @@
-@(data: lib.UiData, message: String)(implicit flash: Flash, messages: Messages)
+@(data: com.bryzek.dependency.lib.UiData, message: String)(implicit flash: Flash, messages: Messages)
 
 @main(data) {
   @message
