--- a/www/app/views/index.scala.html
+++ b/www/app/views/index.scala.html
@@ -1,7 +1,7 @@
-@(data: lib.UiData)(implicit flash: Flash, messages: Messages)
+@(data: com.bryzek.dependency.lib.UiData)(implicit flash: Flash, messages: Messages)
 
 @main(data) {
 
- Hello world
+  <p> Hello world</p>
 
 }
