--- a/www/app/views/main.scala.html
+++ b/www/app/views/main.scala.html
@@ -25,7 +25,7 @@
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
             <li><a@if(data.section == Some(com.bryzek.dependency.lib.Section.Dashboard)) { class="active" } href="@routes.ApplicationController.index()">Dashboard</a></li>
-            <li><a@if(data.section == Some(com.bryzek.dependency.lib.Section.Projects)) { class="active" } href="#">Projects</a></li>
+            <li><a@if(data.section == Some(com.bryzek.dependency.lib.Section.Projects)) { class="active" } href="@routes.ProjectsController.index()">Projects</a></li>
             <li><a@if(data.section == Some(com.bryzek.dependency.lib.Section.Libraries)) { class="active" } href="#">Libraries</a></li>
             <li><a@if(data.section == Some(com.bryzek.dependency.lib.Section.Languages)) { class="active" } href="#">Languages</a></li>
           </ul>
