Add project creation

--- a/www/app/views/projects/index.scala.html
+++ b/www/app/views/projects/index.scala.html
@@ -5,6 +5,10 @@
 
 @main(data.copy(title = Some("Projects"))) {
 
+  <div class="pull-right">
+    <span class="glyphicon glyphicon-plus"></span> <a href="@routes.ProjectsController.create()">Add project</a>
+  </div>
+
   @if(projects.isEmpty) {
     <em>No projects</em>
 
