--- a/www/app/views/languages/table.scala.html
+++ b/www/app/views/languages/table.scala.html
@@ -3,11 +3,14 @@
 @if(languages.isEmpty) {
   <em>No languages</em>
 } else {
-  <table>
-    @languages.items.map { lang =>
-      <tr>
-        <td><a href="#">@lang.name</a></td>
-      </tr>
-    }
-  </table>
+  <div class="table-responsive">
+    <table class="table">
+      @languages.items.map { lang =>
+        <tr>
+          <td><a href="#">Details</a></td>
+          <td>@lang.name</td>
+        </tr>
+      }
+    </table>
+  </div>
 }
