Use responsive table

--- a/www/app/views/projects/index.scala.html
+++ b/www/app/views/projects/index.scala.html
@@ -13,24 +13,27 @@
     <em>No projects</em>
 
   } else {
-    <table>
-    @projects.items.map { p =>
-      <tr>
-        <td><a href="@routes.ProjectsController.show(p.guid)">@{p.name}</a></td>
-      </tr>
-    }
-    </table>
+    <div class="table-responsive">
+      <table class="table">
+        @projects.items.map { p =>
+          <tr>
+            <td><a href="@routes.ProjectsController.show(p.guid)">@{p.name}</a></td>
+          </tr>
+        }
+        </table>
 
-    @if(projects.hasPrevious || projects.hasNext) {
-      <ul class="pager">
-        @if(projects.hasPrevious) {
-          <li><a href="@routes.ProjectsController.index(projects.page - 1)">Previous</a></li>
+        @if(projects.hasPrevious || projects.hasNext) {
+          <ul class="pager">
+            @if(projects.hasPrevious) {
+              <li><a href="@routes.ProjectsController.index(projects.page - 1)">Previous</a></li>
+            }
+            @if(projects.hasNext) {
+              <li><a href="@routes.ProjectsController.index(projects.page + 1)">Next</a></li>
+            }
+          </ul>
         }
-        @if(projects.hasNext) {
-          <li><a href="@routes.ProjectsController.index(projects.page + 1)">Next</a></li>
-        }
-      </ul>
-    }
+      </table>
+    </div>
   }
 
 }
