--- a/www/app/views/libraries/table.scala.html
+++ b/www/app/views/libraries/table.scala.html
@@ -7,9 +7,9 @@
     <table class="table">
       @libraries.items.map { library =>
         <tr>
-          <td><a href="#">Details</a></td>
-          <td>@library.groupId</td>
-          <td>@library.artifactId</td>
+          <td><a href="@routes.LibrariesController.show(library.guid)">Details</a></td>
+          <td><a href="@routes.SearchController.index(q = Some(com.bryzek.dependency.lib.SearchQuery(groupId = Some(library.groupId)).query))">@library.groupId</td>
+          <td><a href="@routes.SearchController.index(q = Some(com.bryzek.dependency.lib.SearchQuery(artifactId = Some(library.artifactId)).query))">@library.artifactId</td>
           <td>@library.resolvers</td>
         </tr>
       }
