--- a/www/app/views/projects/table.scala.html
+++ b/www/app/views/projects/table.scala.html
@@ -1,9 +1,11 @@
 @(projects: io.flow.play.util.PaginatedCollection[com.bryzek.dependency.v0.models.Project])
 
-<table class="table">
-  @projects.items.map { p =>
-    <tr>
-      <td><a href="@routes.ProjectsController.show(p.guid)">@{p.name}</a></td>
-    </tr>
-  }
-</table>
+<div class="table-responsive">
+  <table class="table">
+    @projects.items.map { p =>
+      <tr>
+        <td><a href="@routes.ProjectsController.show(p.guid)">@{p.name}</a></td>
+      </tr>
+    }
+  </table>
+</div>
