--- a/www/app/views/libraries/table.scala.html
+++ b/www/app/views/libraries/table.scala.html
@@ -5,12 +5,20 @@
 } else {
   <div class="table-responsive">
     <table class="table">
+        <thead>
+          <tr>
+            <th></th>
+            <th>Group ID</th>
+            <th>Artifact ID</th>
+            <th>Resolvers</th>
+          </tr>
+        </thead>
       @libraries.items.map { library =>
         <tr>
           <td><a href="@routes.LibrariesController.show(library.guid)">Details</a></td>
           <td><a href="@routes.SearchController.index(q = Some(com.bryzek.dependency.lib.SearchQuery(groupId = Some(library.groupId)).query))">@library.groupId</td>
           <td><a href="@routes.SearchController.index(q = Some(com.bryzek.dependency.lib.SearchQuery(artifactId = Some(library.artifactId)).query))">@library.artifactId</td>
-          <td>@library.resolvers</td>
+          <td>@com.bryzek.dependency.lib.Text.truncate(library.resolvers.mkString(", "))</td>
         </tr>
       }
     </table>
