--- a/www/app/views/projects/show.scala.html
+++ b/www/app/views/projects/show.scala.html
@@ -14,6 +14,7 @@
   <ul>
     <li>SCMS: @project.scms.toString</li>
     <li>URI: <a href="@project.uri">@project.uri</a></li>
+    <li>@audit(project.audit)</li>
   </ul>
 
   <h3>Languages</h3>
