--- a/www/app/views/libraries/versions/table.scala.html
+++ b/www/app/views/libraries/versions/table.scala.html
@@ -11,7 +11,7 @@
           <td>@version.library.groupId</td>
           <td>@version.library.artifactId</td>
           <td>@version.version</td>
-          <td>@version.library.resolvers</td>
+          <td>@com.bryzek.dependency.lib.Text.truncate(version.library.resolvers.mkString(", "), 20)</td>
         </tr>
       }
     </table>
