--- a/www/app/views/libraries/table.scala.html
+++ b/www/app/views/libraries/table.scala.html
@@ -18,7 +18,7 @@
           <td><a href="@routes.LibrariesController.show(library.guid)">Details</a></td>
           <td><a href="@routes.SearchController.index(q = Some(com.bryzek.dependency.lib.SearchQuery(groupId = Some(library.groupId)).query))">@library.groupId</td>
           <td><a href="@routes.SearchController.index(q = Some(com.bryzek.dependency.lib.SearchQuery(artifactId = Some(library.artifactId)).query))">@library.artifactId</td>
-          <td>@com.bryzek.dependency.lib.Text.truncate(library.resolvers.mkString(", "))</td>
+          <td>@com.bryzek.dependency.lib.Text.truncate(library.resolvers.mkString(", "), 20)</td>
         </tr>
       }
     </table>
