--- a/www/app/views/main.scala.html
+++ b/www/app/views/main.scala.html
@@ -27,7 +27,7 @@
             <li><a@if(data.section == Some(com.bryzek.dependency.lib.Section.Dashboard)) { class="active" } href="@routes.ApplicationController.index()">Dashboard</a></li>
             <li><a@if(data.section == Some(com.bryzek.dependency.lib.Section.Projects)) { class="active" } href="@routes.ProjectsController.index()">Projects</a></li>
             <li><a@if(data.section == Some(com.bryzek.dependency.lib.Section.Libraries)) { class="active" } href="@routes.LibrariesController.index()">Libraries</a></li>
-            <li><a@if(data.section == Some(com.bryzek.dependency.lib.Section.Languages)) { class="active" } href="#">Languages</a></li>
+            <li><a@if(data.section == Some(com.bryzek.dependency.lib.Section.Languages)) { class="active" } href="@routes.LanguagesController.index()">Languages</a></li>
           </ul>
         </div>
 
