--- a/www/app/views/projects/show.scala.html
+++ b/www/app/views/projects/show.scala.html
@@ -17,7 +17,7 @@
     <li>@audit(project.audit)</li>
   </ul>
 
-  <h3>LanguageVersions</h3>
+  <h3>Languages</h3>
   @views.html.languages.versions.table(languageVersions)
   @if(languageVersions.hasPrevious || languageVersions.hasNext) {
     <ul class="pager">
