Improve empty label

--- a/www/app/views/languages/versions/table.scala.html
+++ b/www/app/views/languages/versions/table.scala.html
@@ -1,7 +1,7 @@
 @(languageVersions: io.flow.play.util.PaginatedCollection[com.bryzek.dependency.v0.models.LanguageVersion])
 
 @if(languageVersions.isEmpty) {
-  <em>No languageVersions</em>
+  <em>No languages</em>
 } else {
   <div class="table-responsive">
     <table class="table">
